<resources>

    <!-- AsyncTask progress dialogs -->
    <string name="creating">Creating adapter…</string>
    <string name="removing">Removing adapter…</string>
    <string name="synchronizing">Synchronizing…</string>

    <!-- Calendar -->
    <string name="calendar_display_name">Birthdays</string>
    <string name="event_title_birthday_with_age">%1$s: Birthday (%2$d)</string>
    <string name="event_title_birthday_without_age">%1$s: Birthday</string>
    <string name="event_title_anniversary_with_age">%1$s: Anniversary (%2$d)</string>
    <string name="event_title_anniversary_without_age">%1$s: Anniversary</string>
    <string name="event_title_other_with_age">%1$s: Other Event (%2$d)</string>
    <string name="event_title_other_without_age">%1$s: Other Event</string>
    <string name="event_title_custom_with_age">%1$s: %2$s (%3$d)</string>
    <string name="event_title_custom_without_age">%1$s: %2$s</string>

    <!-- About -->
    <string name="about_version">Version:</string>

    <!-- Tabs -->
    <string name="tab_main">Main</string>
    <string name="tab_preferences">Preferences</string>
    <string name="tab_accounts">Account Filter</string>
    <string name="tab_help">Help</string>
    <string name="tab_about">About</string>

    <!-- Preferences -->
    <string name="pref_general">General</string>
    <string name="pref_description">Description</string>
    <string name="pref_enable_switch">Calendar</string>
    <string name="pref_enable">Enable Birthday Calendar</string>
    <string name="pref_enable_summary">Shows birthdays, anniversaries, and other events defined in contacts as a
        calendar in your Android Calendar.
    </string>
    <string name="pref_color">Color</string>
    <string name="pref_color_summary">Color of birthday calendar</string>
    <string name="pref_help">Help</string>
    <string name="pref_about">About</string>
    <string name="pref_force_sync">Synchronize now!</string>
    <string name="pref_force_sync_summary">Normally you don\'t need to do this, because Birthday Adapter synchronizes
        automatically once a day.
    </string>
    <string name="pref_reminders">Reminders</string>
    <string name="pref_reminder_enable0">Enable Reminder 1</string>
    <string name="pref_reminder_enable1">Enable Reminder 2</string>
    <string name="pref_reminder_enable2">Enable Reminder 3</string>
    <string name="pref_reminder_enable_summary">Enable this Reminder</string>
    <string name="pref_reminder_time0">Reminder 1</string>
    <string name="pref_reminder_time1">Reminder 2</string>
    <string name="pref_reminder_time2">Reminder 3</string>
    <string name="pref_reminder_time_summary">Set the time of this Reminder</string>

    <string-array name="pref_reminder_time_drop_down">
        <item>At the day of event</item>
        <item>1 day before</item>
        <item>2 days before</item>
        <item>3 days before</item>
        <item>5 days before</item>
        <item>7 days before</item>
        <item>10 days before</item>
        <item>14 days before</item>
    </string-array>

    <string name="pref_title">Custom Labels</string>
    <string name="pref_title_enable">Enable custom Labels</string>
    <string name="pref_title_birthday_without_age">Birthday</string>
    <string name="pref_title_birthday_with_age">Birthday with age</string>
    <string name="pref_title_anniversary_without_age">Anniversary</string>
    <string name="pref_title_anniversary_with_age">Anniversary with age</string>
    <string name="pref_title_other_without_age">Other event</string>
    <string name="pref_title_other_with_age">Other event with age</string>
    <string name="pref_title_custom_without_age">Custom</string>
    <string name="pref_title_custom_with_age">Custom with age</string>
    <string name="pref_title_summary_without_age">Insert %1$s for the contact\'s name.</string>
    <string name="pref_title_summary_with_age">Insert %1$s for the contact\'s name and %2$d for the age.</string>
    <string name="pref_title_summary_custom_without_age">Insert %1$s for the contact\'s name and %2$s for the custom
        label of this event.
    </string>
    <string name="pref_title_summary_custom_with_age">Insert %1$s for the contact\'s name, %2$s for the custom label of
        this event, and %3$d for the age.
    </string>
    <string name="pref_advanced">Advanced Settings</string>
    <string name="pref_prefer_dd_slash_mm">Prefer dd/MM/yyyy format</string>
    <string name="pref_prefer_dd_slash_mm_summary">Prefer dd/MM/yyyy to MM/dd/yyyy when parsing date formats</string>

    <!-- Adapter Screen -->
    <string name="pref_account_header">Settings</string>
    <string name="pref_account_settings">Configure Birthday Adapter</string>

    <!-- Color Picker -->
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>

    <!-- Accounts -->
    <string name="account_list_description">Only events from selected accounts will be displayed in your calendar.
    </string>
    <string name="account_list_save">Save and apply filter</string>
    <string name="account_list_empty">No accounts</string>

    <!--Free Version -->
    <string name="pref_buy">Buy full version!</string>
    <string name="pref_buy_full">Open Google Play to buy full version…</string>
    <string name="pref_buy_full_summary">• Set your own reminders for events\n• Customize event titles</string>

</resources>