<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.Preference
        android:persistent="false"
        android:selectable="false"
        android:summary="@string/pref_enable_summary"
        android:title="@string/pref_description" />

    <android.support.v7.preference.SwitchPreferenceCompat
        android:icon="@mipmap/ic_launcher"
        android:key="@string/pref_enabled_key"
        android:persistent="false"
        android:title="@string/pref_enable_switch" />

    <android.support.v7.preference.Preference
        android:key="@string/pref_force_sync_key"
        android:persistent="false"
        android:summary="@string/pref_force_sync_summary"
        android:title="@string/pref_force_sync" />

</android.support.v7.preference.PreferenceScreen>