<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_list_description"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:drawSelectorOnTop="false" />

    <TextView
        android:id="@android:id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/account_list_empty"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/account_list_save"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_list_save" />

</LinearLayout>